kubernetes/reddit/mongo-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mongo
  labels:
    app: reddit
    component: mongo
spec:
  restartPolicy: Always
  containers:
  - name: mongo
    image: mongo:4.4.24
    volumeMounts:
    - name: mongo-persistent-storage
      mountPath: /data/db
  volumes:
  - name: mongo-persistent-storage
    persistentVolumeClaim:
      claimName: mongo-pvc
