kubernetes/reddit/test-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod
  template:
    metadata:
      labels:
        app: test-pod
    spec:
      containers:
      - name: python-http-server
        image: python:2.7
        command: ["/bin/bash"]
        args: ["-c", "echo \" Hello from $(hostname)\" > index.html; python -m SimpleHTTPServer 80"]
        ports:
        - name: http
          containerPort: 80
        resources:
          limits:
            memory: 64Mi
            cpu: "0.2"

---
apiVersion: v1
kind: Pod
metadata:
  name: ping-pod
spec:
  containers:
  - name: ping
    image: willfarrell/ping
    resources:
      limits:
        memory: 32Mi
        cpu: "0.2"
