kubernetes/reddit/ui-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: reddit
    component: ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reddit
      component: ui
  template:
    metadata:
      name: ui
      labels:
        app: reddit
        component: ui
    spec:
      containers:
      - name: ui
        image: 23f03013e37f/ui
        resources:
          limits:
            memory: 256Mi
            cpu: "1"
