kubernetes/reddit/mongo-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: reddit
    component: mongo
spec:
  type: NodePort
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: reddit
    component: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: post-db
spec:
  type: ExternalName
  externalName: "mongo.dev.svc.cluster.local"

---
apiVersion: v1
kind: Service
metadata:
  name: comment-db
spec:
  type: ExternalName
  externalName: "mongo.dev.svc.cluster.local"
